[project]
  name = "pulumi_random"
  description = "A Pulumi package to safely use randomness in Pulumi programs."
  dependencies = ["parver>=0.2.1", "pulumi", "semver>=2.8.1"]
  keywords = ["pulumi", "random"]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "4.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://pulumi.io"
    Repository = "https://github.com/pulumi/pulumi-random"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_random = ["py.typed", "pulumi-plugin.json"]
